--- a/web_akademik_php/assets/style/dashboard.css
+++ b/web_akademik_php/assets/style/dashboard.css
@@ -1,11 +1,8 @@
-@import url("https://fonts.googleapis.com/css?family=lato:400,700&display=swap");
-/* fungsi dari kode diatas adalah mengimpor gaya font "dari google fonts dengan bobot 400 dan 700,
-dan menetapkan tampilan yang optimal untuk meningkatkan kinerja tampilan teks di halaman web. */
-
+@import url("https://fonts.googleapis.com/css?family=Lato:400, 700&display-swap");
 .item{
     margin-top: 50px;
     width: 20%;
-    background-color: #ffff;
+    background-color:#FFFF;
     margin-left: 4%;
     float: left;
     padding: 10px 10px 10px 10px;
@@ -17,11 +14,10 @@ dan menetapkan tampilan yang optimal untuk meningkatkan kinerja tampilan teks di
     border-radius: 50%;
     margin: 0 auto;
     margin-top: -40px;
-    /*backround-color: #ffffff;*/
 }
 
 .data-user{
-    font: 16px/1.5 "lato", sans-serif;
+    font: 16px/1.5 "Lato", sans-serif;
     font-size: 20px;
     display: table;
     margin: 0 auto;
@@ -45,7 +41,6 @@ dan menetapkan tampilan yang optimal untuk meningkatkan kinerja tampilan teks di
 .ruangan{
     background-image: linear-gradient(#CAD0FC, #FFD770) !important;
 }
-/* Dashboard Mahasiwa */
 .info{
     width: 100%;
     height: 100%;
@@ -54,7 +49,7 @@ dan menetapkan tampilan yang optimal untuk meningkatkan kinerja tampilan teks di
 
 .left-item{
     width: 47%;
-    background-color: #7784E9;
+    background-color: #7784E9; 
     color: white;
     float: left;
     font-size: 50px;
@@ -65,6 +60,7 @@ dan menetapkan tampilan yang optimal untuk meningkatkan kinerja tampilan teks di
 .right-item{
     width: 47%;
     color: white;
+    background-color: #7784E9; 
     float: right;
     font-size: 50px;
     border-radius: 10px;
