--- a/web_akademik_php/assets/style/homepage.css
+++ b/web_akademik_php/assets/style/homepage.css
@@ -1,44 +1,42 @@
-@import url("https://fonts.googleapis.com/css?family=lato:400,700&display=swap");
-/* fungsi dari kode diatas adalah mengimpor gaya font "dari google fonts dengan bobot 400 dan 700,
-dan menetapkan tampilan yang optimal untuk meningkatkan kinerja tampilan teks di halaman web. */
+@import url("https://fonts.googleapis.com/css?family=Lato: 400, 700&display=swap");
 
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
+
 a {
     text-decoration: none;
 }
 
-.link{
-    color:black;
+.link {
+    color: black;
 }
 
 body {
-    font: 16px/1.5 "lato", sans-sarif;
+    font: 16px/1.5 "Lato", sans-serif;
 }
 
-.logo{
+.logo {
     width: 170px;
 }
-
 
 ul {
     list-style: none;
 }
-.container{
+
+.container {
     width: 100%;
 }
-/* Header Style */
+
 .page-header {
-    position: fixed;
-    margin: 0;
+    position: fixed; 
+    margin :0; 
     padding: 0;
     height: 100%;
     overflow: auto;
     width: 15%;
-    /*backround: #5564D6;*/
     background-image: linear-gradient(#94D4F3, #5564D6) !important;
 }
 
@@ -46,7 +44,6 @@ ul {
     padding: 8px 0px 8px 10px;
     text-decoration: none;
     width: 100%;
-    /* font-size: 16px;*/
     font-size: 14px;
     color: #FFFEFE;
     display: block;
@@ -58,16 +55,16 @@ ul {
 }
 
 .page-header a:hover, .dropdown-btn:hover {
-    background-color: #7784E9;
+    background-color:#7784E9;
     color: #FEFEFF;
-}
+    }
 
 .active {
-    background-color: #46A2CF;
+    background-color:#46A2CF;
     color: #FFFF;
 }
 
-.page-logo{
+.page-logo {
     display: table;
     margin: 0 auto;
     margin-bottom: 20px;
@@ -79,43 +76,40 @@ ul {
     font-size: 12px;
     margin-top: 12px;
     margin-left: 12px;
-    color: white;
+    color: #FFFEFE;
 }
 
-.fa-icon{
+.fa-icon { 
     float: left;
     padding-right: 10px;
 }
 
-/*dropdown*/
 .dropdown-container {
     display: none;
     background-color: #5564D6;
     padding-left: 8px;
 }
 
-/*Optional Style the caret down icon */
 .fa-caret-down {
     float: right;
     padding-right: 8px;
 }
 
-/* Conten Style */
-.page-content{
+.page-content {
     margin: 0;
-    background-color: #CAD0FC;
+    background-color: #CADBFC;
     height: 100%;
     width: 85%;
     position: absolute;
     right: 0;
 }
 
-.icon{
+.icon {
     width: 40px;
     margin-left: 10px;
 }
 
-.content-header{
+.content-header {
     width: 100%;
     background-color: #FFFFFF;
     display: flex;
@@ -123,17 +117,16 @@ ul {
     padding: 15px 15px 15px 15px;
 }
 
-.admin-icon{
+.admin-icon {
     position: absolute;
     display: flex;
-    align-items: center;
+    align-items: center; 
     right: 0;
     margin-right: 20px;
-
 }
 
-.content{
+.content {
     width: 100%;
-    background-color: #CAD0FC;
+    background-color:#CAD0FC;
     padding: 20px 20px 20px 20px;
 }
