--- a/web_akademik_php/assets/style/modal.css
+++ b/web_akademik_php/assets/style/modal.css
@@ -1,57 +1,49 @@
-@import url("https://fonts.googleapis.com/css?family=lato:400,700&display=swap");
-/* fungsi dari kode diatas adalah mengimpor gaya font "dari google fonts dengan bobot 400 dan 700,
-dan menetapkan tampilan yang optimal untuk meningkatkan kinerja tampilan teks di halaman web. */
+@import url("https://fonts.googleapis.com/css?family=Lato:400,700&display-swap");
 
-/* Modal (latar belakang)*/
 .modal {
-    font: 16px/1.5 "lato", sans-serif;
-    display: none; /* Tersembunyi secara default*/
-    position: fixed; /*Tepat di tempat*/
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /*Location of the box*/
+    font: 16px/1.5 "Lato", sans-serif;
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgba(0,0,0,0.4); /*Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color:rgba(0,0,0,0.4);
 }
 
-/* Modal Content */
-.modal-content {
+.modal-content{
     position: relative;
     background-color: #fefefe;
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
     width: 40%;
-
     -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
+    -webkit-animation-duration: 0.45;
     animation-name: animatetop;
     animation-duration: 0.4s;
 }
 
-/* Add Animation */
-@-webkit-keyframes animatetop {
-    from {top: -300px; opacity: 0;}
-    to {top: 0; opacity: 1;}
+@-webkit-keyframes animatetop { 
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
 }
-
 @keyframes animatetop {
-    from {top: -300px; opacity: 0;}
-    to {top: 0; opacity: 1;} 
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
 }
 
-/* Tombol tutup */
 .close {
-    color: black;
+    color:#000000;
     float: right;
     font-size: 28px;
     font-weight: bold;
 }
 
-.close:hover
+.close:hover,
 .close:focus {
     color: #000;
     text-decoration: none;
@@ -61,7 +53,7 @@ dan menetapkan tampilan yang optimal untuk meningkatkan kinerja tampilan teks di
 .modal-header {
     padding: 2px 16px;
     background-color: #FFFFFF;
-    color: black;
+    color:#000000;
     margin-bottom: 20px;
 }
 
@@ -79,6 +71,7 @@ input[type=text], input[type=password], input[type=number] {
     border: 3px solid #ccc;
     outline: none;
 }
+
 input[type=time]{
     width: 48%;
     padding: 12px 20px;
@@ -93,13 +86,13 @@ input[type=text]:focus, input[type=password]:focus {
 }
 
 input[type=submit] {
-    width: 30%;
-    background-color: green;
+    width: 30%; 
+    background-color:green;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
     border-radius: 4px;
-    cursor: pointer;
+    cursor: pointer; 
     outline: none;
-}
+}    
