--- a/web_akademik_php/assets/style/tabel.css
+++ b/web_akademik_php/assets/style/tabel.css
@@ -1,80 +1,83 @@
-.input-container{
-    background-color: #FFFF;
+.input-container {
+  background-color: #ffff;
 }
 
-.tabel-page{
-    background-color: #FFFF;
-    box-shadow: 2px 2px 2px rgba(0, 0, 0,0.3);
-    padding: 10px;
-    width: 100%;
-    height: auto;
+.tabel-page {
+  background-color: #ffff;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+  padding: 10px;
+  width: 100%;
+  height: auto;
 }
 
 #list-data {
-    font: 16px/1.5 "lato", sans-serif;
-    border-collapse: collapse;
-    width: 100%;
+  font: 16px/1.5 "Lato", sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+#list-data td,
+#list-data th {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: center;
 }
 
-#list-data td, #list data th {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: center;
+#list-data tr:nth-child(even) {
+  background-color: #f2f2f2;
 }
 
-#list-data tr:nth-child(even){background-color: #f2f2f2;}
-
-#list-data tr:hover {background-color: #ddd;}
+#list-data tr:hover {
+  background-color: #ddd;
+}
 
 #list-data th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: center;
-    background-color: #7784E9;
-    color: white;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #7784e9;
+  color: white;
 }
 
-.tabel-heading{
-    font-size: 20px;
-    margin-bottom: 10px;
+.tabel-heading {
+  font-size: 20px;
+  margin-bottom: 10px;
 }
 
-.button-container{
-    margin-bottom: 10px;
+.button-container {
+  margin-bottom: 10px;
 }
 
-.button-input{
-    background-color: green;
-    border-radius: 5%;
-    padding: 5px;
-    border: none;
-    color: #FFFFFF;
+.button-input {
+  background-color: green;
+  border-radius: 5%;
+  padding: 5px;
+  border: none;
+  color: #ffffff;
 }
 
-.button-delete{
-    background-color: #FF0000;
-    border-radius: 5%;
-    padding: 5px;
-    border: none;
-    color: #FFFFFF;
+.button-delete {
+  background-color: #ff0000;
+  border-radius: 5%;
+  padding: 5px;
+  border: none;
+  color: #ffffff;
 }
 
-.button-edit{
-    background-color: #1528B7;
-    border-radius: 5%;
-    padding: 5px;
-    border: none;
-    color: #FFFFFF;
+.button-edit {
+  background-color: #1528b7;
+  border-radius: 5%;
+  padding: 5px;
+  border: none;
+  color: #ffffff;
 }
 
-.search-box{
-    width: 20%;
-    float: left;
-    margin-right: 10%;
+.search-box {
+  width: 20%;
+  float: left;
+  margin-right: 10%;
 }
 
-.data-result{
-    width: 70%;
-    float: left;
-    
+.data-result {
+  width: 70%;
+  float: left;
 }
